test/resolver/fail/resolve_circular_import.ms
import { a_val } from "module_circular_a";
val x := a_val;
